// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration: User settings authenticated user with both automatic unfurls configured and prompts muted sees both settings 1`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "name": "get-settings-for-repo",
          "options": Array [
            Object {
              "text": "atom/atom",
              "value": "12345|atom/atom",
            },
            Object {
              "text": "kubernetes/kubernetes",
              "value": "54321|kubernetes/kubernetes",
            },
          ],
          "text": "Select a repository",
          "type": "select",
        },
      ],
      "callback_id": "unfurl-settings-auto",
      "color": "#24292f",
      "text": "Links you post linking to 2 private repositories automatically get a rich preview. Select a repository to adjust its settings.",
      "title": "Automatic rich previews",
    },
    Object {
      "actions": Array [
        Object {
          "name": "unmute-prompts",
          "text": "Unmute",
          "type": "button",
        },
      ],
      "callback_id": "unfurl-settings",
      "color": "#24292f",
      "text": "Prompts to show a rich preview are muted indefinitely",
      "title": "Muted prompts to show rich preview",
    },
  ],
}
`;

exports[`Integration: User settings authenticated user with both settings configured clicks unmute button and sees confirmation message 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": ":white_check_mark: Prompts to show a rich preview have been unmuted",
    },
  ],
}
`;

exports[`Integration: User settings authenticated user with both settings configured confirms removal of autounfurl removes repo from settings and posts confirmation message to user 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": ":white_check_mark: Links you post to \`integrations/snappydoo\` will no longer receive automatic rich previews.",
    },
  ],
}
`;

exports[`Integration: User settings authenticated user with both settings configured selects repo for which to stop autounfurls and is presented with a follow up message 1`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "confirm": Object {
            "dismiss_text": "Cancel",
            "ok_text": "Yes",
            "text": "This will disable automatic rich previews for links you post linking to \`integrations/snappydoo\` in *all* channels",
            "title": "Are you sure?",
          },
          "name": "remove-repo",
          "style": "danger",
          "text": "Disable automatic rich previews",
          "type": "button",
          "value": "12345|integrations/snappydoo",
        },
      ],
      "callback_id": "unfurl-settings-auto",
      "color": "#24292f",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Links you post linking to \`integrations/snappydoo\` automatically get a rich preview in all channels.",
      "title": "Automatic rich previews",
    },
  ],
  "replace_original": true,
}
`;

exports[`Integration: User settings authenticated user with just auto unfurls configured sees just that setting 1`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "name": "get-settings-for-repo",
          "options": Array [
            Object {
              "text": "atom/atom",
              "value": "12345|atom/atom",
            },
            Object {
              "text": "kubernetes/kubernetes",
              "value": "54321|kubernetes/kubernetes",
            },
          ],
          "text": "Select a repository",
          "type": "select",
        },
      ],
      "callback_id": "unfurl-settings-auto",
      "color": "#24292f",
      "text": "Links you post linking to 2 private repositories automatically get a rich preview. Select a repository to adjust its settings.",
      "title": "Automatic rich previews",
    },
  ],
}
`;

exports[`Integration: User settings authenticated user with just prompts muted sees just that setting 1`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "name": "unmute-prompts",
          "text": "Unmute",
          "type": "button",
        },
      ],
      "callback_id": "unfurl-settings",
      "color": "#24292f",
      "text": "Prompts to show a rich preview are muted indefinitely",
      "title": "Muted prompts to show rich preview",
    },
  ],
}
`;

exports[`Integration: User settings authenticated user with no settings configured gets message stating that 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "You do not have any settings configured.",
    },
  ],
}
`;

exports[`Integration: User settings authenticated user with prompts muted temporarily doesn't see setting showing time remaining 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "You do not have any settings configured.",
    },
  ],
}
`;

exports[`Integration: User settings authenticated user with prompts muted temporarily sees setting showing time remaining 1`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "name": "unmute-prompts",
          "text": "Unmute",
          "type": "button",
        },
      ],
      "callback_id": "unfurl-settings",
      "color": "#24292f",
      "text": "Prompts to show a rich preview are muted for 2 hours",
      "title": "Muted prompts to show rich preview",
    },
  ],
}
`;
